tests/baselines/reference/wrappedIncovations2(strict=true).errors.txt
wrappedIncovations2.ts(2,3): error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.


==== wrappedIncovations2.ts (1 errors) ====
    var v = this.
      foo().
      ~~~
!!! error TS7017: Element implicitly has an 'any' type because type 'typeof globalThis' has no index signature.
      bar().
      baz();